# termic

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  changelog.json  justfile  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  wdio.conf.ts
.claude/skills/e2e/: SKILL.md
.claude/skills/release/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: release.yml  self-assign.yml  test.yml
docs/: automation.md  cli-agent-instructions.md  data-model.md  e2e-tests.md  gotchas.md  ipc.md  performance.md  sandbox.md  shortcuts.md  tech-debt.md  themes.md  ui.md
docs/plans/: 2026-05-28-001-feat-context-picker-plan.md  WEBGL-RETINA-DIACRITICS.md  cli.md  dock-widget.md  e2e-coverage.md  lsp.md  newsletter.md  notarization.md  right-panel-refresh.md  space-layer.md  workspace-to-task-rename.md
docs/plans/docker-sandbox/: Dockerfile  README.md  design.md  findings.md
docs/superpowers/specs/: 2026-05-28-context-picker-design.md
e2e/: helpers.ts  tsconfig.json
e2e/specs/: agent-attention.e2e.ts  agent-extras.e2e.ts  agent-settings.e2e.ts  agent-working.e2e.ts  agent.e2e.ts  app.e2e.ts  code-editor.e2e.ts  command-palette.e2e.ts  commit-push.e2e.ts  create-wizard.e2e.ts  dialogs-open.e2e.ts  dialogs2.e2e.ts  discover.e2e.ts  editor-save.e2e.ts  editor.e2e.ts  file-finder.e2e.ts  file-tree.e2e.ts  files.e2e.ts  find-in-files.e2e.ts  git-commit.e2e.ts  git-dirty.e2e.ts  git-panel.e2e.ts  git.e2e.ts  import-worktree.e2e.ts  layout.e2e.ts  message-queue.e2e.ts  multi-task.e2e.ts  prefs.e2e.ts  project.e2e.ts  projects.e2e.ts  rename.e2e.ts  repo-config.e2e.ts  resume-tab.e2e.ts  run-config.e2e.ts  run-stop.e2e.ts  run.e2e.ts  sandbox.e2e.ts  settings.e2e.ts  setup-script.e2e.ts  smoke.e2e.ts  (+10 more)
scripts/: build-cli.mjs  changelog.mjs  dev.mjs  dev.signals.test.mjs  e2e-seed.mjs  fake-agent.sh  gen-icon.sh  install-app.sh  release.sh
scripts/e2e-seed/: projects.json  settings.json
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  tauri.beta.conf.json  tauri.conf.json
src-tauri/assets/themes/: README.md  example.json.sample
src-tauri/capabilities/: default.json
src-tauri/icons/beta/: icon.icns
src-tauri/icons/dev/: icon.icns
src-tauri/resources/sounds/: choo_choo.caf
src-tauri/src/: automation.rs  cli_server.rs  docker.rs  headless_terminal.rs  lib.rs  proxy.rs  repo_config.rs  sandbox.rs  shell_env.rs
src/components/: SandboxIcon.tsx  SandboxModeSelector.tsx  TaskLocationIcon.tsx  TinyproxyBanner.tsx  UnifiedBar.tsx  UpdaterBanner.tsx  WaitingAgentsPill.tsx
src/components/dialogs/: BroadcastDialog.tsx  ChangelogDialog.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextPickerDialog.tsx  CustomCommandDialog.tsx  Dialogs.tsx  EditCommandDialog.tsx  FileFinderDialog.tsx  FindInFilesDialog.tsx  MessageQueueDialog.tsx  NewProjectDialog.tsx  NewTaskDialog.tsx  NewWorkspaceDialog.tsx  ProjectPickerDialog.tsx  PromptDestinationDialog.tsx  PromptPalette.tsx  QuickCreateProgressDialog.tsx  RaceDialog.tsx  ResumeOverrideDialog.tsx  ReviewDialog.tsx  RunCommandsDialog.tsx  ShortcutsHelpDialog.tsx  TaskSandboxDialog.tsx  TerminalDropDialog.tsx  WelcomeDialog.tsx  WorkspaceDockerPanel.tsx  WorkspaceSandboxDialog.tsx
src/components/settings/: AgentsSection.tsx  AppearanceSection.tsx  DockerSection.tsx  ExcludeEditor.tsx  GeneralSection.tsx  PromptLibrarySection.tsx  RepositorySection.tsx  RunCommandsEditor.tsx  ScriptField.tsx  Settings.tsx  ShortcutsSection.tsx  SubSection.tsx
src/components/sidebar/: ProjectActionsMenuItems.tsx  Sidebar.tsx  UpdateCard.tsx
src/components/task/: AuxTerminal.tsx  CopyPathItems.tsx  DiffPane.tsx  EditorPane.tsx  FileTree.tsx  GitPanel.tsx  MainArea.tsx  MarkdownPane.tsx  MarkdownPreview.test.ts  MarkdownPreview.tsx  MessageQueueButton.tsx  PaneHeader.tsx  PreviewPane.tsx  RaceBoard.tsx  RaceCompare.tsx  ReviewCommentsBar.tsx  RightPanel.tsx  RunControls.tsx  RunPane.tsx  SplitLauncher.tsx  SplitView.tsx  TabBar.tsx  TaskView.tsx  TerminalExitedBanner.tsx  TerminalPane.tsx  TerminalPathMenu.tsx  reviewCommentsExt.ts  useTabStripDrag.ts
src/components/ui/: Checkbox.tsx  ContextMenu.tsx  Dialog.tsx  Dropdown.tsx  Input.tsx  Popover.tsx  ResizeHandle.tsx  Toaster.tsx  Tooltip.tsx
src/components/views/: Dashboard.tsx  History.tsx
src/components/workspace/: AuxTerminal.tsx  CopyPathItems.tsx  DiffPane.tsx  EditorPane.tsx  FileTree.tsx  GitPanel.tsx  MainArea.tsx  MarkdownPane.tsx  MarkdownPreview.test.ts  MarkdownPreview.tsx  MessageQueueButton.tsx  PaneHeader.tsx  ReviewCommentsBar.tsx  RightPanel.tsx  RunControls.tsx  RunPane.tsx  SplitLauncher.tsx  SplitView.tsx  TabBar.tsx  TerminalExitedBanner.tsx  TerminalPane.tsx  WorkspaceView.tsx  reviewCommentsExt.ts  useTabStripDrag.ts
src/hooks/: useAttentionNotifier.ts  useIsFullscreen.ts  useShortcuts.ts
src/icons/: TermicLogo.tsx  cli.tsx
src/lib/: activeTerminal.test.ts  activeTerminal.ts  agentRace.ts  agentSend.ts  agents.test.ts  agents.ts  archiveTask.test.ts  archiveTask.ts  archiveWorkspace.test.ts  archiveWorkspace.ts  atTrigger.test.ts  atTrigger.ts  atlasCanvasGuard.test.ts  atlasCanvasGuard.ts  build.ts  builtinPrompts.ts  cliAgentState.test.ts  cliAgentState.ts  cliRpc.test.ts  cliRpc.ts  clipboard.ts  closeTab.ts  contextPicker.test.ts  contextPicker.ts  createLock.test.ts  createLock.ts  customTheme.test.ts  customTheme.ts  dragGhost.ts  dropZones.ts  editorTheme.ts  excludePresets.ts  fuzzy.test.ts  fuzzy.ts  fuzzy.tsx  hiddenScrollRestore.ts  ime.test.ts  ime.ts  ipc.ts  loginShell.test.ts  (+42 more)
src/lib/explorer/: fileIcons.ts  folderIcons.ts
src/store/: app.test.ts  app.ts  fileViewed.ts  prefs.test.ts  prefs.ts  prompts.ts  race.integration.test.ts  race.ts  resume.integration.test.ts  reviewComments.ts  scriptRuns.ts  ui.ts  update.test.ts  update.ts
termic-cli/: Cargo.toml  build.rs
termic-cli/src/: client.rs  lib.rs  main.rs  output.rs
termic-proto/: Cargo.toml
termic-proto/src/: lib.rs
