[package]
name = "termic"
version = "0.15.6"
description = "Run claude, gemini, and codex in parallel — each in its own git worktree."
authors = ["Simion Agavriloaei"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/simion/termic"
homepage = "https://termic.dev"
readme = "../README.md"
publish = false

[lib]
name = "termic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
parking_lot = "0.12"
libc = "0.2"
# font-kit enumerates installed system fonts and exposes is_monospace().
# Lazy-evaluated: only the `list_monospace_fonts` command pulls families.
font-kit = "0.14"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
regex = "1.12.3"
# YAML parse/serialize for the repo-root `.termic.yaml`. serde_yml is the
# maintained fork of the now-unmaintained serde_yaml.
serde_yml = "0.0.12"
# Glob matching for the file-tree exclude patterns (.termic.yaml `exclude`
# + the personal global list). Already in the dependency tree transitively,
# so pinning it direct doesn't change resolution.
glob = "0.3"

# macOS-only: raw Objective-C bridge used to round the window's content
# layer on macOS Tahoe (26+) so the WKWebView corners match the system's
# enlarged window radius (see round_window_corners_for_tahoe in lib.rs).
# Both crates are already in the dependency tree via tauri/wry, so pinning
# them here doesn't change resolution.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo"] }

[dev-dependencies]
tempfile = "3"
