# Workspace root. The two CLI crates live BESIDE src-tauri (repo root)
# per docs/plans/cli.md; keeping the workspace rooted here keeps
# Cargo.lock and target/ where every script, CI cache key, and Makefile
# path already expects them.
[workspace]
members = ["../termic-proto", "../termic-cli"]

[package]
name = "termic"
version = "0.23.4"
description = "Run claude, gemini, and codex in parallel — each in its own git worktree."
authors = ["Simion Agavriloaei"]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/simion/termic"
homepage = "https://termic.dev"
readme = "../README.md"
publish = false

[lib]
name = "termic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
portable-pty = "0.8"
parking_lot = "0.12"
libc = "0.2"
# font-kit enumerates installed system fonts and exposes is_monospace().
# Lazy-evaluated: only the `list_monospace_fonts` command pulls families.
font-kit = "0.14"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
regex = "1.12.3"
# YAML parse/serialize for the repo-root `.termic.yaml`. serde_yml is the
# maintained fork of the now-unmaintained serde_yaml.
serde_yml = "0.0.12"
# Glob matching for the file-tree exclude patterns (.termic.yaml `exclude`
# + the personal global list). Already in the dependency tree transitively,
# so pinning it direct doesn't change resolution.
glob = "0.3"
# data: URL encoding for workspace images in the markdown preview
# (workspace_file_read_base64). Already in the dependency tree transitively,
# so pinning it direct doesn't change resolution.
base64 = "0.22"
# Decode the url-encoded task id + relative path in the `taskpdf:` URI-scheme
# handler (native PDF preview). Already in the tree via tauri/url, so pinning
# it direct doesn't change resolution.
percent-encoding = "2"
tauri-plugin-clipboard-manager = "2.3.2"
# Wire types + framing for the CLI control socket (cli_server.rs). The
# same crate termic-cli links, so server and client cannot drift.
termic-proto = { path = "../termic-proto" }
# Optional: only pulled in by the `e2e` feature (WebdriverIO harness).
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

# macOS-only: raw Objective-C bridge used to round the window's content
# layer on macOS Tahoe (26+) so the WKWebView corners match the system's
# enlarged window radius (see round_window_corners_for_tahoe in lib.rs).
# Both crates are already in the dependency tree via tauri/wry, so pinning
# them here doesn't change resolution.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSData"] }
# NSApplication.setApplicationIconImage, used ONLY by set_dev_dock_icon (debug
# builds): `tauri dev` runs an unbundled binary, so the dock icon can't come
# from tauri.conf.json and has to be set at runtime. Also already in the tree
# via tauri/wry.
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }

[dev-dependencies]
tempfile = "3"

# The WebdriverIO e2e harness, behind an opt-in feature so it is NEVER in a
# normal dev or release build. `tauri-plugin-wdio-webdriver` embeds a W3C
# WebDriver HTTP server (port 4445) in the webview so @wdio/tauri-service can
# drive the real WKWebView window (clicks, screenshots) on macOS. It exposes
# no IPC commands and needs no capability grant. Build the e2e binary with
# `tauri build --debug --features e2e`; every other build omits all of it.
# (cfg(debug_assertions) can't gate deps — Cargo ignores it — so this is a
# feature, not a profile check.)
[features]
e2e = ["dep:tauri-plugin-wdio-webdriver"]
