[package]
name = "termic-proto"
version = "0.1.0"
description = "Wire types for the termic CLI <-> app control socket (NDJSON framing, protocol version, exit codes)."
edition = "2021"
license = "AGPL-3.0-or-later"
publish = false
workspace = "../src-tauri"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
